--- a/hasi1-rekap-rahasia.html
+++ b/hasi1-rekap-rahasia.html
@@ -84,19 +84,19 @@
 
     <div class="stat-grid">
         <div class="stat-item">
-            <img src="https://github.com/azzahrolocare/pemilu-osis-smp-azzahro/raw/main/paslon1-osis-smp-2026-2027.jpg" alt="Foto Paslon 1" class="paslon-photo">
+            <img src="https://github.com/azzahrolocare/pemilu-osis-smk-azzahro/raw/main/paslon1-osis-smk-2026-2027.jpg" alt="Foto Paslon 1" class="paslon-photo">
             <h3 id="v1">0</h3>
             <p class="label-paslon">Paslon 01</p>
         </div>
 
         <div class="stat-item">
-            <img src="https://github.com/azzahrolocare/pemilu-osis-smp-azzahro/raw/main/paslon2-osis-smp-2026-2027.jpg" alt="Foto Paslon 2" class="paslon-photo">
+            <img src="https://github.com/azzahrolocare/pemilu-osis-smk-azzahro/raw/main/paslon2-osis-smk-2026-2027.jpg" alt="Foto Paslon 2" class="paslon-photo">
             <h3 id="v2">0</h3>
             <p class="label-paslon">Paslon 02</p>
         </div>
 
         <div class="stat-item">
-            <img src="https://github.com/azzahrolocare/pemilu-osis-smp-azzahro/raw/main/paslon3-osis-smp-2026-2027.jpg" alt="Foto Paslon 3" class="paslon-photo">
+            <img src="https://github.com/azzahrolocare/pemilu-osis-smk-azzahro/raw/main/paslon3-osis-smk-2026-2027.jpg" alt="Foto Paslon 3" class="paslon-photo">
             <h3 id="v3">0</h3>
             <p class="label-paslon">Paslon 03</p>
         </div>
@@ -114,17 +114,17 @@
         <h3 style="font-size: 1.2rem; color: var(--text); text-align: left;">Persentase Perolehan Suara</h3>
         
         <div class="container-visual">
-            <p style="margin: 5px 0;">Paslon 01 - Wulan Tria Mita Raharjo</p>
+            <p style="margin: 5px 0;">Paslon 01 - Putri Ayu Lestari</p>
             <div class="progress-bar">
                 <div id="bar1" class="progress-fill" style="width: 0%">0%</div>
             </div>
             
-            <p style="margin: 15px 0 5px 0;">Paslon 02 - Agustian Ridwanto</p>
+            <p style="margin: 15px 0 5px 0;">Paslon 02 - Rizki Hidayat</p>
             <div class="progress-bar">
                 <div id="bar2" class="progress-fill" style="width: 0%; background: #ef4444">0%</div>
             </div>
 
-            <p style="margin: 15px 0 5px 0;">Paslon 03 - Muhammad Nur Halil</p>
+            <p style="margin: 15px 0 5px 0;">Paslon 03 - Lilis Cintya Ningsih</p>
             <div class="progress-bar">
                 <div id="bar3" class="progress-fill" style="width: 0%; background: #10b981">0%</div>
             </div>
