--- a/hasi1-rekap-rahasia.html
+++ b/hasi1-rekap-rahasia.html
@@ -106,7 +106,7 @@
         <div class="header-text">
             <h2 style="margin:0; color: var(--primary);">REAL COUNT PANITIA</h2>
             <h1 style="margin:5px 0;">SMK AZ-ZAHRO</h1>
-            <p style="margin:0;">Data rekapitulasi suara berdasarkan <strong>Kode Unik DPT</strong> yang sah.</p>
+            <p style="margin:0;">Data rekapitulasi suara berdasarkan <strong>DPT</strong> yang sah.</p>
         </div>
     </div>
 
