--- a/hasi1-rekap-rahasia.html
+++ b/hasi1-rekap-rahasia.html
@@ -106,7 +106,7 @@
         <div class="header-text">
             <h2 style="margin:0; color: var(--primary);">REAL COUNT PANITIA</h2>
             <h1 style="margin:5px 0;">SMK AZ-ZAHRO</h1>
-            <p style="margin:0;">Data rekapitulasi suara berdasarkan <strong>DPT</strong> yang sah.</p>
+            <p style="margin:0;">Data rekapitulasi suara berdasarkan <strong>DPT Siswa</strong> yang sah.</p>
         </div>
     </div>
 
@@ -160,7 +160,7 @@
 
         <div style="margin-top: 30px; padding-top: 20px; border-top: 1px solid #e2e8f0;">
             <button onclick="location.reload()" style="padding: 10px 20px; cursor: pointer; border-radius: 5px; border: none; background: #64748b; color: white;">Refresh Data</button>
-            <button onclick="resetData()" style="padding: 10px 20px; cursor: pointer; border-radius: 5px; border: 1px solid #ef4444; background: transparent; color: #ef4444; margin-left: 10px;">Reset Hasil (Bahaya!)</button>
+            <button onclick="resetData()" style="padding: 10px 20px; cursor: pointer; border-radius: 5px; border: 1px solid #ef4444; background: transparent; color: #ef4444; margin-left: 10px;">Reset Hasil</button>
         </div>
     </div>
 
