--- a/hasi1-rekap-rahasia.html
+++ b/hasi1-rekap-rahasia.html
@@ -158,19 +158,19 @@
     <div class="stat-grid">
         <div class="stat-item">
             <img src="https://github.com/azzahrolocare/pemilu-osis-smk-azzahro/raw/main/paslon1-osis-smk-2026-2027.jpg" alt="Foto Paslon 1" class="paslon-photo">
-            <p class="label-paslon">Paslon 01</p>
+            <p class="label-paslon">Putri Ayu Lestari</p>
             <h3 id="v1">0</h3>
         </div>
 
         <div class="stat-item">
             <img src="https://github.com/azzahrolocare/pemilu-osis-smk-azzahro/raw/main/paslon2-osis-smk-2026-2027.jpg" alt="Foto Paslon 2" class="paslon-photo">
-            <p class="label-paslon">Paslon 02</p>
+            <p class="label-paslon">Rizki Hidayat</p>
             <h3 id="v2">0</h3>
         </div>
 
         <div class="stat-item">
             <img src="https://github.com/azzahrolocare/pemilu-osis-smk-azzahro/raw/main/paslon3-osis-smk-2026-2027.jpg" alt="Foto Paslon 3" class="paslon-photo">
-            <p class="label-paslon">Paslon 03</p>
+            <p class="label-paslon">Lilis Cintya Ningsih</p>
             <h3 id="v3">0</h3>
         </div>
 
@@ -191,7 +191,7 @@
         <div class="container-visual">
             <div style="margin-bottom: 20px;">
                 <div style="display: flex; justify-content: space-between; font-weight: 600;">
-                    <span>Paslon 01 - Putri Ayu Lestari</span>
+                    <span>Putri Ayu Lestari</span>
                 </div>
                 <div class="progress-bar">
                     <div id="bar1" class="progress-fill" style="width: 0%">0%</div>
@@ -200,7 +200,7 @@
             
             <div style="margin-bottom: 20px;">
                 <div style="display: flex; justify-content: space-between; font-weight: 600;">
-                    <span>Paslon 02 - Rizki Hidayat</span>
+                    <span>Rizki Hidayat</span>
                 </div>
                 <div class="progress-bar">
                     <div id="bar2" class="progress-fill" style="width: 0%; background: linear-gradient(90deg, #ef4444, #b91c1c)">0%</div>
@@ -209,7 +209,7 @@
 
             <div style="margin-bottom: 20px;">
                 <div style="display: flex; justify-content: space-between; font-weight: 600;">
-                    <span>Paslon 03 - Lilis Cintya Ningsih</span>
+                    <span>Lilis Cintya Ningsih</span>
                 </div>
                 <div class="progress-bar">
                     <div id="bar3" class="progress-fill" style="width: 0%; background: linear-gradient(90deg, #10b981, #047857)">0%</div>
